--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Interactive Periodic Table</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
+    <div class="periodic-table">
+        <div class="element" data-symbol="H" data-name="Hydrogen" data-atomic-number="1">H</div>
+        <div class="element" data-symbol="He" data-name="Helium" data-atomic-number="2">He</div>
+        <!-- Add more elements here -->
+    </div>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+    <div id="element-info" class="info-box"></div>
 
+    <script src="script.js"></script>
 </body>
 </html>
