--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Periodic Table</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="javascript" href="fluid.js">
 </head>
 <body>
     <div class="periodic-table">
-        <div class="elemeasdasdasdasdnt" data-symbol="H" data-name="Hydrogen" data-atomic-number="1">H</div>
-        <div class="element" data-symbol="He" data-name="Helium" data-atomic-number="2">He</div>
+        <div class="elemeasdasdasdasdnt" data-symbol="H" data-name="Hydrogen" data-atomic-number="1"></div>
+        <div class="element" data-symbol="He" data-name="Helium" data-atomic-number="2"></div>
     </div>
 
     <div id="element-info" class="info-box"></div>
@@ -23,77 +24,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Periodic Table</title>
-    <style>
-        * {
-            margin: 0;
-            font-family: Arial, Helvetica, sans-serif;
-            font-weight: 600;
-        }
-
-        td {
-            width: 5vw;
-            border: 1px solid black;
-            text-align: center;
-        }
-
-        .noBorder {
-            border: none;
-        }
-
-        .headingOne {
-            background-color: yellow;
-            padding: 5px;
-            font-size: 5vw;
-        }
-
-        ._color_1 {
-            background-color: #ff9966;
-        }
-
-        .color_2 {
-            background-color: #dda0dd;
-        }
-
-        .color_3 {
-            background-color: #90c7ff;
-        }
-
-        .color_4 {
-            background-color: #fceff0;
-        }
-
-        .color_5 {
-            background-color: #fff28e;
-        }
-
-        .color_6 {
-            background-color: #c79810;
-        }
-
-        .color_7 {
-            background-color: #cdeb8b;
-        }
-
-        .color_8 {
-            background-color: #ebdca9;
-        }
-
-        .color_9 {
-            background-color: #e6e6fa;
-        }
-
-        .text_color_green {
-            color: green;
-        }
-
-        .text_color_blue {
-            color: blue;
-        }
-
-        .text_color_red {
-            color: red;
-        }
-    </style>
+    
 </head>
 
 <body>
