--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Periodic Table</title>
+    <title>Tabelul Periodic</title>
     <link rel="stylesheet" href="style.css">
     <link rel="javascript" href="fluid.js">
 </head>
@@ -14,22 +14,9 @@
     </div>
 
     <div id="element-info" class="info-box"></div>
-
-    <script src="script.js"></script>
-</body>
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Periodic Table</title>
-    
-</head>
-
-<body>
+    <script src="fluid.js"></script>
     <center>
-        <h1 class="headingOne">The Periodic Table</h1>
+        <h1 class="headingOne">Tabelul Periodic</h1>
         <table>
             <tr>
                 <td class="_color_1 text_color_green">1<br />H</td>
@@ -179,6 +166,9 @@
             </tr>
         </table>
     </center>
+    <div id="sketch-container"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+    <script src="fluid.js"></script>
 </body>
 
 </html>
